; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_fd.c_sys_dup3.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_fd.c_sys_dup3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.fdtable* }
%struct.fdtable = type { i32, %struct.fd** }
%struct.fd = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"dup3(%d, %d, %d)\00", align 1
@current = common dso_local global %struct.TYPE_2__* null, align 8
@_EBADF = common dso_local global i32 0, align 4
@O_CLOEXEC_ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_dup3(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.fdtable*, align 8
  %9 = alloca %struct.fd*, align 8
  %10 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @STRACE(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i64 %11, i64 %12, i32 %13)
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load %struct.fdtable*, %struct.fdtable** %16, align 8
  store %struct.fdtable* %17, %struct.fdtable** %8, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call %struct.fd* @f_get(i64 %18)
  store %struct.fd* %19, %struct.fd** %9, align 8
  %20 = load %struct.fd*, %struct.fd** %9, align 8
  %21 = icmp eq %struct.fd* %20, null
  br i1 %21, label %22, label %24

22:                                               ; preds = %3
  %23 = load i32, i32* @_EBADF, align 4
  store i32 %23, i32* %4, align 4
  br label %56

24:                                               ; preds = %3
  %25 = load %struct.fdtable*, %struct.fdtable** %8, align 8
  %26 = load i64, i64* %6, align 8
  %27 = call i32 @fdtable_expand(%struct.fdtable* %25, i64 %26)
  store i32 %27, i32* %10, align 4
  %28 = load i32, i32* %10, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %24
  %31 = load i32, i32* %10, align 4
  store i32 %31, i32* %4, align 4
  br label %56

32:                                               ; preds = %24
  %33 = load %struct.fd*, %struct.fd** %9, align 8
  %34 = call i32 @fd_retain(%struct.fd* %33)
  %35 = load i64, i64* %6, align 8
  %36 = call i32 @f_close(i64 %35)
  %37 = load %struct.fd*, %struct.fd** %9, align 8
  %38 = load %struct.fdtable*, %struct.fdtable** %8, align 8
  %39 = getelementptr inbounds %struct.fdtable, %struct.fdtable* %38, i32 0, i32 1
  %40 = load %struct.fd**, %struct.fd*** %39, align 8
  %41 = load i64, i64* %6, align 8
  %42 = getelementptr inbounds %struct.fd*, %struct.fd** %40, i64 %41
  store %struct.fd* %37, %struct.fd** %42, align 8
  %43 = load i32, i32* %7, align 4
  %44 = load i32, i32* @O_CLOEXEC_, align 4
  %45 = and i32 %43, %44
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %53

47:                                               ; preds = %32
  %48 = load i64, i64* %6, align 8
  %49 = load %struct.fdtable*, %struct.fdtable** %8, align 8
  %50 = getelementptr inbounds %struct.fdtable, %struct.fdtable* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @bit_set(i64 %48, i32 %51)
  br label %53

53:                                               ; preds = %47, %32
  %54 = load i64, i64* %6, align 8
  %55 = trunc i64 %54 to i32
  store i32 %55, i32* %4, align 4
  br label %56

56:                                               ; preds = %53, %30, %22
  %57 = load i32, i32* %4, align 4
  ret i32 %57
}

declare dso_local i32 @STRACE(i8*, i64, i64, i32) #1

declare dso_local %struct.fd* @f_get(i64) #1

declare dso_local i32 @fdtable_expand(%struct.fdtable*, i64) #1

declare dso_local i32 @fd_retain(%struct.fd*) #1

declare dso_local i32 @f_close(i64) #1

declare dso_local i32 @bit_set(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
